scalar DateTime
scalar Upload

################################################################################
#### QUERY
################################################################################

## !!!!!!!! Please add in dictionary order.

type Query {
  admins(input: AdminsInput!): AdminsResult!
  articles(input: ArticlesInput!): ArticlesResult!
  article(input: ArticleInput!): Article!
  articleStatuses: ArtcleStatusesResult!
}

################################################################################
#### MUTATION
################################################################################

## !!!!!!!! Please add in dictionary order.
type Mutation {
  addNewArticle(input: AddNewArticleInput!): AddNewArticleResult!
  signIn(input: SignInInput!): SignInResult!
  updateArticle(input: UpdateArticleInput!): UpdateArticleResult!
  uploadThumbnail(input: UploadThumbnailInput!): UploadThumbnailResult!
}

type AdminsResult {
  admins: [ListAdmin!]!
  pagination: Pagination!
}

type AddNewArticleResult {
  articleId: Int!
  thumbnailUrl: String!
  title: String!
  content: String!
  postedAt: String!
  savedAt: String!
  tags: [Tag!]!
  status: StatusPhase!
}

type ArticlesResult {
  articles: [ListArticle!]!
  pagination: Pagination!
}

type ArtcleStatusesResult {
  statuses: [Status!]!
}

type Article {
  articleId: Int!
  thumbnailUrl: String!
  title: String!
  content: String!
  postedAt: DateTime!
  savedAt: DateTime!
  tags: [Tag!]!
}

type ListAdmin {
  adminId: Int!
  username: String!
  email: String!
  registeredAt: DateTime!
}

type ListArticle {
  articleId: Int!
  thumbnailUrl: String!
  title: String!
  postedAt: DateTime!
  savedAt: DateTime!
  tags: [Tag!]!
}

type Pagination {
  limit: Int!
  offset: Int!
  sort: Sort
}

type SignInResult {
  accessToken: String!
}

type Sort {
  targetColumn: String!
  orderBy: String!
}

type Status {
  statusId: Int!
  name: String!
}

type StatusPhase {
  statusId: Int!
  statusName: String!
  phasedAt: DateTime!
}

type Tag {
  tagId: Int!
  name: String!
}

type UpdateArticleResult {
  articleId: Int!
  thumbnailUrl: String!
  title: String!
  content: String!
  postedAt: DateTime!
  savedAt: DateTime!
  tags: [Tag!]!
  status: StatusPhase!
}

type UploadThumbnailResult {
  imageUrl: String!
}

################################################################################
#### INPUT
################################################################################

input AddNewArticleInput {
  thumbnailUrl: String!
  title: String!
  content: String!
  postedAt: DateTime!
  tagIds: [Int!]
  statusId: Int!
}

input AdminsInput {
  pagination: PaginationInput!
}

input ArticleInput {
  articleId: Int!
}

input ArticlesInput {
  tagIds: [Int!]!
  pagination: PaginationInput!
}

input PaginationInput {
  limit: Int!
  offset: Int!
  sort: SortInput
}

input SortInput {
  targetColumn: String!
  orderBy: String!
}

input SignInInput {
  email: String!
  password: String!
}

input UpdateArticleInput {
  articleId: Int!
  thumbnailUrl: String!
  title: String!
  content: String!
  postedAt: DateTime!
  tagIds: [Int!]
  statusId: Int!
}

input UploadThumbnailInput {
  image: Upload!
}
